k8s/postgres-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
# 4 Types of service
  # 1) ClusterIP -> Expses a set of pods to other objects in the cluster
  # 2) NodePort -> Exposes a set of pods to the outside world (only good for dev purposes!!!)
  # 3) LoadBalancer -> Legacy way of getting network traffic into a cluster
  # 4) Ingess - > Exposes a set of services to the outside world
  type: ClusterIP
  selector:
    component: postgres
  ports:
    - port: 5432
      targetPort: 5432


# Services - types of objects set up for networking
# 3) LoadBalancer -> Legacy way of getting network traffic into a cluster/ your application (Deprecated????)
# 4) Ingess - > Exposes a set of services to the outside world  - new and better way of getting trafic into a cluster/ your application


# LoadBalancer (Googe Cloud uses behind the scenes when using Ingress)
# Remember, the goal of a service is to kind of manage access or provide networking to reach a set of
# pods.And so a load balancer only is going to give you access to ONE set of pods.
# In our case, our application has two sets of pods, that we want to expose to the outside world
# 1) multi-client pod and 2) multi-server pods

# 4) Ingess - > Exposes a set of services to the outside world
# This is a type of service that is going to eventually get some amount of traffic into our application
# and allow our outside users to access all the different pods that are running containers that they need
# to get at to actually access or out.

# In the world of K8s, there are
# several different implementations of ingress.
# We are going to be using a very specific implementation called an NginX ingress.

# NB WE are going to be using a project called "ingress-nginx" (A commmunity led project) 
  # github.com/kubernetes/ingress-nginx

# Both Named -> NGINX Ingress Controller in Github (Very much Differnt projects and work differently)

# TOTALLY SEPARATE PROJECT
# NB We are NOT using "kubernetes-ingress" (A project lef by the company nginx)
  # github.com/nginxinc/kubernetes-ingress


# The setup of this ingress is going to be slightly different or in some cases very different, depending
# upon the environment that you are using it in.
# So if you are deploying this Ingress and next thing in your LOCAL environment or Google Cloud or Adewusi
# or Azure, it's going to be very different in each of these different environments.
